...
                                    <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kxr-pK-SMU">
                                        <rect key="frame" x="329.33333333333337" y="46" width="127.33333333333331" height="24"/>
                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="plain">
                                            <attributedString key="attributedTitle">
                                                <fragment content="Registrate ahora">
                                                    <attributes>
                                                        <font key="NSFont" size="14" name="HelveticaNeue"/>
                                                        <font key="NSOriginalFont" size="14" name="HelveticaNeue"/>
                                                    </attributes>
                                                </fragment>
                                            </attributedString>
...
                                                <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="16"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="axeladmin@gmail.com" borderStyle="roundedRect" placeholder="Correo Electronico" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XGA-tR-1AS">
                                                <rect key="frame" x="0.0" y="24.333333333333314" width="225" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="loginCorreo"/>
                                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
                                                <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
                                            </textField>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Debes ingresar un correo!!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xbZ-ZQ-qKg">
                                                <rect key="frame" x="0.0" y="63.333333333333321" width="225" height="14.333333333333336"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
...
                                                <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="16"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Correo Electronico" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ySF-sY-0Jo">
                                                <rect key="frame" x="0.0" y="23.333333333333314" width="225" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="registerCorreo"/>
                                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
                                                <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
                                            </textField>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Debes ingresar un correo!!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fMe-vb-Uit">
                                                <rect key="frame" x="0.0" y="61.333333333333321" width="225" height="14.333333333333336"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
...
